# slip39-calculator

./: .envrc.example  .gitignore  .mise.toml  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  lefthook.yml
const/: wordlist_array.txt
crates/slip39/: AGENTS.md  Cargo.toml  README.md
crates/slip39/src/: lib.rs  main.rs  tui.rs
crates/slip39/tests/: prefix_tests.rs
src/: lib.rs  main.rs  tui.rs
tests/: integration_test.rs  validation_tests.rs
